# fyai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  config.yaml.sample
.github/workflows/: cmake.yaml  release.yaml
cmake/: config.h.in  merge-tags.cmake  tags.cmake
data/: catalog.yaml  config.schema.yaml
doc/: GITHUB_MCP.md  display-output-semantics.md  event-pump-architecture.md  mcp-oauth.md  schema-validator-plan.md
doc/srd/: fyai-srd-core-v0_11.md  fyai-srd-cost-composition-v0_11.md  fyai-srd-phase2-filesystem-v0_11.md  fyai-srd-phase3-branching-v0_11.md  fyai-srd-phase4-inference-state-v0_11.md  fyai-srd-v0_11-decision-log.md  fyai-srd-v0_11.md  fyai-srd.md
docker/: Dockerfile.clone  Dockerfile.fetch  Dockerfile.static
scripts/: build-static-docker.sh  cmake-with-libfyaml-fetchcontent.sh
src/: commands.c  commands.h  fyai.c  fyai.h  fyai_auth.c  fyai_auth.h  fyai_auth_util.c  fyai_auth_util.h  fyai_catalog.c  fyai_catalog.h  fyai_config.c  fyai_config.h  fyai_curl.c  fyai_curl.h  fyai_diag.c  fyai_diag.h  fyai_display.c  fyai_display.h  fyai_event.c  fyai_event.h  fyai_event_linux.c  fyai_event_mac.c  fyai_event_priv.h  fyai_jsonrpc.c  fyai_jsonrpc.h  fyai_log.c  fyai_log.h  fyai_markdown.c  fyai_markdown.h  fyai_mcp.c  fyai_model.h  fyai_oauth.c  fyai_oauth.h  fyai_output.c  fyai_output.h  fyai_patch.c  fyai_patch.h  fyai_prof.c  fyai_prof.h  fyai_provider.c  (+29 more)
stylings/: fyai-markdown.yaml  fyai-plain.yaml  fyai-vivid.yaml
tests/: fyai_config_test.c  fyai_config_test_stubs.c  fyai_curl_test.c  fyai_diag_test.c  fyai_event_test.c  fyai_jsonrpc_test.c  fyai_oauth_test.c  fyai_patch_test.c  fyai_provider_test.c  fyai_schema_test.c  fyai_stackcheck_test.c  fyai_test.h  harness.sh  pty_driver.py
tests/cases/: api_switch.sh  apply_patch_codex_scenarios.sh  ask_user_answer.sh  async_state_debug.sh  auth_config.sh  auth_login_interrupt.sh  cache_prefix.sh  catalog_import.sh  chat_basic.sh  chat_stream.sh  chat_stream_logprobs.sh  chat_stream_tool_deltas.sh  chat_tools_read_file.sh  compact.sh  config_arena.sh  config_catalog_properties.sh  config_import_export_edit.sh  config_ops.sh  cross_provider_messages.sh  google_catalog_resolve.sh  http_500.sh  interrupt.sh  interrupt_partial.sh  local_no_auth.sh  malformed_json.sh  mcp.sh  mcp_lifecycle.sh  mcp_multiple.sh  mcp_stdio.sh  mcp_stdio_sigpipe.sh  mcp_stdio_stubborn.sh  messages_basic.sh  messages_errors.sh  messages_stream.sh  messages_stream_extents.sh  messages_stream_tool_deltas.sh  messages_tools_read_file.sh  model_catalog_resolve.sh  model_step_async_disabled.sh  perf_large_conversation.sh  (+38 more)
tests/mock/: mock_mcp_stdio.py  mock_mcp_stdio_stubborn.py  mock_provider.py
tests/scenarios/: api_hop.json  api_switch.json  ask_user.json  cache_chat.json  cache_messages.json  cache_responses.json  chat_basic.json  chat_basic_twice.json  chat_stream.json  chat_stream_logprobs.json  chat_stream_queued_input.json  chat_stream_tool_deltas.json  chat_stream_tool_overlap.json  chat_themed_markdown.json  chat_tools_read_file.json  compact.json  cross_chat_then_messages.json  cross_messages_then_chat.json  errors.json  interrupt.json  interrupt_partial.json  malformed.json  mcp.json  mcp_lifecycle.json  mcp_multiple.json  mcp_stdio.json  messages_basic.json  messages_error_event.json  messages_errors.json  messages_stream.json  messages_stream_tool_deltas.json  messages_tools_read_file.json  reasoning_chat.json  reasoning_responses.json  response_chain_fallback.json  response_failed.json  responses_basic.json  responses_builtin_shell.json  responses_builtin_shell_parallel.json  responses_stream.json  (+19 more)
